Avoid overflowing comments.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -562,6 +562,7 @@ hr ~ div.center:not(.ad-cnt) {
 }
 .catalog-thread > .comment {
   flex-shrink: 1;
+  max-width: 100%;
   overflow: hidden;
   text-align: center;
 }
